# walmart-sales-prediction

./: .gitignore  apiTest.py  pyproject.toml
src/: data_ingestion.py
